# tomato-timer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: audio.rs  cli.rs  main.rs  theme.toml  tui.rs  util.rs
src/help_text/: main.txt  muted.txt  noise.txt  start.txt
