[package]
name = "tomato-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["default"] }
clap = { version = "4.1.8", features = ["derive", "cargo"] }
cursive = { version = "0.20.0", features = ["toml"] }
tokio = { version = "1.26.0", features = ["full"] }
